# authentik-operator

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  index.yaml
.github/workflows/: publish.yml  release.yml
chart/: Chart.yaml
chart/templates/: clusterrole.yaml  service.yaml
chart/templates/tests/: test-connection.yaml
charts/authentik-operator/: Chart.yaml  values.yaml
charts/authentik-operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
docs/: authentik-application.md  authentik-application.yaml  authentik-group.md  authentik-group.yaml  authentik-provider-oauth.md  authentik-provider-oauth.yaml  authentik-user.md  authentik-user.yaml  authentik.md  authentik.yaml  complete.yaml
examples/: authentik-group.yaml  authentik-provider-oauth.yaml  authentik-user.yaml  authentik.yaml
src/: crdgen.rs  error.rs  lib.rs  main.rs
src/akapi/: auth.rs  client.rs  mod.rs  server.rs  types.rs  user.rs
src/akapi/application/: create.rs  delete.rs  get.rs  mod.rs  patch.rs
src/akapi/certificate/: find.rs
src/akapi/flow/: delete.rs  get.rs  mod.rs
src/akapi/group/: create.rs  delete.rs  find.rs  mod.rs
src/akapi/propertymappings/: find_scope.rs  mod.rs
src/akapi/provider/: create_oauth.rs  delete_oauth.rs  find.rs  find_oauth.rs  mod.rs  patch_oauth.rs
src/akapi/stages/: delete.rs  find.rs  mod.rs
src/akapi/token/: create.rs  delete.rs  mod.rs  view.rs
src/akapi/user/: create.rs  create_service.rs  delete_account.rs  find.rs  get_self.rs  mod.rs  (+2 more)
src/resources/: mod.rs
(+33 files in other folders)
