[package]
name = "authentik-operator"
version = "0.2.4"
edition = "2021"
authors = ["Dany Sluijk <me@dany.dev>"]
default-run = "akcontroller"

[[bin]]
doc = false
name = "akcontroller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "akcontroller"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.1.0"
futures = "0.3.21"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.15.0", features = [
    "v1_22",
], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
schemars = { version = "0.8.8", features = ["chrono"] }
serde_yaml = "0.8.23"
tonic = { version = "0.7.2", optional = true }
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["json", "env-filter"] }
rand = "0.8.5"
async-trait = "0.1.56"
anyhow = "1.0.58"
reqwest = { version = "0.11.11", features = ["json"] }
lazy_static = "1.4.0"
regex = "1.6.0"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.74.0"
